--- a/app/src/main/res/layout/fragment_deuxieme.xml
+++ b/app/src/main/res/layout/fragment_deuxieme.xml
@@ -6,14 +6,31 @@
     android:orientation="vertical"
     tools:context=".DeuxiemeFragment" >
 
-    <TextView
-        android:id="@+id/champNiveau"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="50dp"
-        android:gravity="center_horizontal"
-        android:text="Quel est votre niveau d'activité actuel ?" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/champNiveau"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="50dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Quel est votre niveau d'activité actuel ?" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="50dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
 
     <SeekBar
         android:id="@+id/seekBar"
@@ -22,4 +39,5 @@
         android:layout_height="wrap_content"
         android:max="10"
         android:progress="1" />
+
 </LinearLayout>
